--- a/css/styles.css
+++ b/css/styles.css
@@ -453,7 +453,7 @@ h1, h2, h3, h4, h5, h6,
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
-  color: #343a40;
+  color: #f43a40;
 }
 
 h1, .h1 {
